--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - '**.py' # Change to the file extension of the language that you are using.
+  workflow_dispatch: # This is to manually trigger the workflow
 
 jobs:
   deploy:
