--- a/.github/workflows/create-layer.yml
+++ b/.github/workflows/create-layer.yml
@@ -15,6 +15,13 @@ jobs:
         with:
           python-version: 3.10.12  # Use the same Python version as your virtual environment
 
+      - name: Navigate to root directory
+        run:
+          ls
+          cd $GITHUB_WORKSPACE
+          ls
+
+
       - name: Activate virtual environment
         run: source venv/bin/activate
 
