better create-layer workflow

--- a/.github/workflows/create-layer.yml
+++ b/.github/workflows/create-layer.yml
@@ -1,6 +1,11 @@
 name: Create Lambda Layer
 
 on:
+  push:
+    branches:
+      - main
+    paths:
+      - requirements.txt
   workflow_dispatch:
 
 jobs:
