--- a/.github/workflows/create-layer.yml
+++ b/.github/workflows/create-layer.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.12.2  # Use the same Python version as your virtual environment
+          python-version: 3.12.2
 
       - name: Install dependencies
         run: pip install -r requirements.txt
