--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -41,13 +41,12 @@ jobs:
           aws s3 cp s3://$S3_BUCKET/$S3_KEY existing_lambda.zip
           # Unzip the existing package
           unzip existing_lambda.zip -d lambda_env
-          # Copy only the modified .py files from the commit into the unzipped directory
-          # This will maintain their directory structure.
-          for file in $(git diff-tree --no-commit-id --name-only -r HEAD); do
-              if [[ $file in "${ALLOWED_PYTHON_FILES[@]}" ]]; then
-                  # Create the directory structure in lambda_env for the modified file
+          # Copy allowed Python files
+          for file in "${ALLOWED_PYTHON_FILES[@]}"; do
+              if [[ -e $file ]]; then
+                  # Create the directory structure in lambda_env for the allowed file
                   mkdir -p lambda_env/$(dirname $file)
-                  # Copy the modified file
+                  # Copy the allowed file
                   cp $file lambda_env/$file
                   # Print what you've done with the file
                   echo "Copied $file to lambda_env/$file"
@@ -55,6 +54,16 @@ jobs:
                   cat lambda_env/$file
               fi
           done
+          
+          # Remove files not in ALLOWED_PYTHON_FILES from lambda_env
+          find lambda_env -type f -not -name '*.py' -delete
+          for file in $(find lambda_env -type f); do
+              if ! [[ "${ALLOWED_PYTHON_FILES[@]}" =~ $(echo $file | sed 's/lambda_env\///') ]]; then
+                  echo "File $file is not in ALLOWED_PYTHON_FILES, removing..."
+                  rm $file
+              fi
+          done
+          
           # Zip the directory again
           cd lambda_env
           zip -r ../updated_lambda.zip .
