--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -35,7 +35,7 @@ jobs:
           S3_BUCKET=nba-connections
           S3_KEY=nba-connections.zip
           LAMBDA_FUNCTION_NAME=nba-find-connection
-          REQUIRED_FILES=("service.py" "find_connection_networkx.py" "response".py) # Add the files that you want to deploy here. 
+          REQUIRED_FILES=("service.py" "find_connection_networkx.py" "response".py player_graph.pickle) # Add the files that you want to deploy here. 
 
           # Download the existing zip from S3
           aws s3 cp s3://$S3_BUCKET/$S3_KEY existing_lambda.zip
@@ -50,13 +50,10 @@ jobs:
                   cp $file lambda_env/$file
                   # Print what you've done with the file
                   echo "Copied $file to lambda_env/$file"
-                  echo "Content of $file after copying:"
-                  cat lambda_env/$file
               fi
           done
           
           # Remove files not in ALLOWED_PYTHON_FILES from lambda_env
-          find lambda_env -type f -not -name '*.py' -delete
           for file in $(find lambda_env -type f); do
               if ! [[ "${ALLOWED_PYTHON_FILES[@]}" =~ $(echo $file | sed 's/lambda_env\///') ]]; then
                   echo "File $file is not in ALLOWED_PYTHON_FILES, removing..."
