--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -35,7 +35,7 @@ jobs:
           S3_BUCKET=nba-connections
           S3_KEY=nba-connections.zip
           LAMBDA_FUNCTION_NAME=nba-find-connection
-          REQUIRED_FILES=("service.py" "find_connection_networkx.py" "get_team_graph.py" "response".py player_graph.pickle) # Add the files that you want to deploy here. 
+          REQUIRED_FILES=("service.py" "find_connection_networkx.py" "get_team_graph.py" "find_team_connection.py" "response".py player_graph.pickle) # Add the files that you want to deploy here. 
 
           # Download the existing zip from S3
           aws s3 cp s3://$S3_BUCKET/$S3_KEY existing_lambda.zip
